# cuckoofilter

./: README.md  cuckoofilter.cabal  stack.yaml
src/Data/: CuckooFilter.hs
src/Data/CuckooFilter/: Fingerprint.hs  ST.hs
