name:                cuckoofilter
version:             0.1.0.0
synopsis:            A pure implementation of Cuckoo Filters.
description:         https://www.cs.cmu.edu/~dga/papers/cuckoo-conext2014.pdf
homepage:            https://github.com/adinapoli/cuckoofilter#readme
license:             BSD3
license-file:        LICENSE
author:              Alfredo Di Napoli
maintainer:          alfredo.dinapoli@gmail.com
copyright:           2017 Alfredo Di Napoli
category:            data-structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite cuckoofilter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cuckoofilter
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adinapoli/cuckoofilter
